--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -4,112 +4,17 @@ body {
     font-family: sans-serif;
     background-color: #EDF1F8;
     overflow-x: hidden;
-}
+    
 
-/* Admin Navbar */
-
-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0 100px;
-    width: 100%;
-    box-sizing: border-box;
-    background: #1A5184;
 }
-.logo {
-    color: #FFFFFF;
-    height: 50px;
-    line-height: 50px;
-    font-size: 30px;
-    float: left;
-    font-weight: bold;
-    font-style: italic;
-    margin-right: 215px;
-}
-header nav ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-header nav ul li {
-    list-style: none;
-}
-nav ul li a {
-    margin-left: 10px;
-    height: 50px;
-    line-height: 50px;
-    padding: 0 20px;
-    color: #FFFFFF;
-    text-decoration: none;
-    display: inline-block;
-    font-weight: bold;
-}
-nav ul li a:hover 
-nav ul li a:active {
-    color: #FFFFFF;
-    background: #04192E;
-}
-.menu-toggle {
-    color: #FFFFFF;
-    float: right;
-    line-height: 50px;
-    font-size: 24px;
-    cursor: pointer;
-    display: none;
-}
-a:hover {
-    text-decoration: none;
+#active {
     color: #FFB703;
 }
-.active {
-    color: #FFB703;
-}
-.profile_btn {
-    margin-left: 310px;
-    margin-top: 8px;
-}
-.profile_img {
-    width: 25px;
-    height: 25px;
-    margin-right: 5px;
-}
-.dropdown-toggle {
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden;
-    outline:none;
-    color: #FFFFFF ;
-}
-.caret {
-    color: #FFFFFF;
-    width: 5px;
-    height: 5px;
-}
-.dropdown-menu {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.dropdown-menu .dropdown-item {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown-menu a:hover {background-color: #ddd;}
-
-
-
 
 /* Admin Search Bar */
 
 .search_con {
-    margin-top: 80px;
+    margin-top: 40px;
     float: right;
     margin-right: -300px;
 }
@@ -120,6 +25,7 @@ a:hover {
 }
 .adjust_con_dash {
     margin-top: 30px;
+    margin-left: 10px;
 }
 .searchbar { 
     width: 300px;
@@ -294,14 +200,7 @@ a:hover {
     color: red;
     font-size: 14px;
 }
-.alert-danger {
-    font-size: 14px;
-    width: 100%;
-    height: 30px;
-    background-color: rgb(228, 139, 139);
-    padding-top: 10px;
-    border-radius: 5px;
-}
+
 .alert-success {
     font-size: 14px;
     width: 100%;
@@ -373,10 +272,6 @@ a:hover {
 
 /* Admin Dashboard */
 
-.row_dashboard {
-    margin-top: 30px;
-    padding: 20px;
-}
 .col_dashboard_main {
     background-color: #FFFFFF;
 }
@@ -509,7 +404,7 @@ a:hover {
     color: #04192E;
     font-weight: bolder;
     margin-left: 60px;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 .show_info {
     margin-top: 20px;
@@ -544,6 +439,7 @@ a:hover {
     width: 90%;
     height: auto;
     margin-bottom: 10%;
+    min-height: 45vh;
 }
 .user_table {
     height: auto;
@@ -629,7 +525,7 @@ a:hover {
     font-weight: bold;
 }
 .services_title_con {
-    margin-top: 9vw;
+    margin-top: 4vw;
     margin-left: 8vw;
 }
 .add_service_btn {
@@ -656,6 +552,7 @@ a:hover {
 .transaction_con {
     margin-left: 110px;
     margin-top: 20px;
+    min-height: 65vh;
 }
 .col_services, 
 .col_transaction {
@@ -694,15 +591,15 @@ a:hover {
     border-radius: 15px; 
 }
 .broom_img {
-    width: 30px;
-    height: 30px;
+    width: 65px;
+    height: 70px;
     margin-right: 15px; 
     background-color: #2B81B0;  
-    border-radius: 10px; 
+    border-radius: 10px;  
 }
 .broom_img_inside {
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 90px;
     margin-right: 5px; 
     background-color: #2B81B0;  
     border-radius: 10px; 
@@ -857,31 +754,9 @@ a:hover {
     background-color: rgb(177, 224, 243);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#card-lists {
+    margin-left: 0px;
+}
 
 /* Responsiveness */
 
@@ -892,25 +767,7 @@ a:hover {
     .menu-toggle {
         display: block;
     }
-    nav {
-        position: absolute;
-        width: 100%;
-        height: calc(100vh - 50px);
-        background: #04192E;
-        top: 50px;
-        left: -100%;
-        transition: 0.3s;
-    }
-    header nav.active {
-        left: 0;
-    }
-    header nav ul{
-        display: block;
-        text-align: center;
-    }
-    header nav ul li a {
-        border-bottom: 1px solid rgba(0, 0, 0, .2);
-    }
+    
     .cards_title {
         padding-left: 5%;
         padding-top: 30%;
@@ -920,6 +777,7 @@ a:hover {
     .trans_his_con {
         margin-left: auto;
         margin-right: auto;
+        
     }
     .add_service_con {
         padding-left: 10%;
@@ -960,4 +818,35 @@ a:hover {
 .stars {
     color: #ff7501;
     font-size: 1.2em;
+}
+.sweep-title{
+    font-size: clamp(15px, 4vw, 17px);
+    font-weight:400;
+    color: #F7f7f7;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.footer{
+    background-color: #061835;
+    padding: .75%;
+}
+
+#footer {
+    background-color: #061835;
+    margin:0 auto;
+    width:100%;
+    height:auto;
+    overflow:hidden;
+    position: relative;
+    bottom: 0px;
+    padding: .75%;
+}
+
+.modal-title {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px;
+}
+.modal-header {
+    border-bottom: 2px solid #FB8500;
 }
