--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,21 +17,28 @@
     padding: 15% 15%;
 }
 
-
+.row{
+    margin-left: 0;
+    margin-right: 0;
+}
 
 .banner{
     background-image: url(/images/home/home-bg.png);
-    height: 93vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .book_container{
+    top: 50%;
     margin: 0 auto;
     background: #F7f7f7;
-    width: 40%;
-    padding: 5% 3%;
+    width: 60%;
+    padding: 5% 2%;
     border-radius: 0.75rem;
     align-self: center;
     text-align: center;
@@ -61,6 +68,53 @@
     display:flow-root;
     background: linear-gradient(-10deg, #fcd3b4, #fdf1e8, #bbdff1, #BEE7FD);
 }
+
+.card-center{
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+.card{
+    margin: 20px;
+    background-color: #FFEDDF;
+    background-clip: border-box;
+    border: 1px solid #FFEDDF;
+    border-radius: 0.75rem;
+    max-width: 540px;
+}
+
+.card-body{
+    align-content: space-between;
+}
+.card-img{
+    object-fit:fill;
+    border-radius: 0.75rem;
+}
+
+
+.price{
+    font-weight:bolder;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+.price1{
+    padding-left: 10px;
+}
+.book{
+    padding-right: 10px;
+}
+
+.starts{
+    font-size: small;
+}
+
+.price{
+    font-size: 30px;
+}
+.btn-align-left{
+    align-items: flex-end;
+}
+
 
 .row2{
     display: flex;
@@ -107,6 +161,13 @@
     background: #f8b571
 }
 
+.recom_title{
+    padding: 20px 20px 0px 20px;
+}
+
+.customer_cards_title{
+    font-size: 25px;
+}
 
 .dcont{
     margin-left: 2%;
@@ -135,20 +196,34 @@
     line-height: 40px;
 }
 
-.footer{
+.footer {
+    margin-top: 30px;
     background-color: #061835;
+    margin:0 auto;
+    width:100%;
+    height:auto;
+    overflow:hidden;
+    position: relative;
+    bottom: 0px;
     padding: .75%;
+    color: white;
 }
-
 .sweep-title{
     font-size: clamp(15px, 4vw, 17px);
     font-weight:400;
     color: #F7f7f7;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.mobile-spacer{
+    display: none;
 
+}
 
-@media (max-width:800px){
+.columns{
+    padding-left: 0;
+    padding-right: 0;
+}
+@media (max-width:768px){
     .carousel-item { 
         height: 30%;
     }
@@ -172,6 +247,64 @@
     .no_active{
         color: #1A5184;
         font-weight:bolder;
+        margin: 10% 10% 10% 10%;
+        font-size: clamp(30px, 5vw, 50px);
+    }
+    .qoute{
+        margin: 0% 10% 5% 10%;
+        font-size: clamp(10px, 4vw, 25px);
+    }
+    .download, .footer{
+        display: none;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .row1{
+        justify-content: space-between;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    .card-img{
+        height: 265px;
+        object-fit:fill;
+        border-radius: 0.75rem;
+        
+    }
+    .card{
+        margin: 20px;
+    }
+    .customer_cards_title{
+        padding: 10px;
+        margin: 10px;
+    }
+    .mobile-spacer{
+        display: block;
+        height: 80px;
+    }
+    .columns{
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+
+@media (max-width:450px){
+    .banner{
+        height: 60vh;
+    }
+    .book_container{
+        margin: 0 auto;
+        background: #F7f7f7;
+        width: 80%;
+        padding: 7% 10%;
+        border-radius: 0.75rem;
+        align-self: center;
+        text-align: center;
+    }
+    .no_active{
+        color: #1A5184;
+        font-weight:bolder;
         margin: 0% 0% 3% 0%;
         font-size: clamp(20px, 4vw, 40px);
     }
@@ -180,5 +313,7 @@
         margin: 0% 7% 15% 7%;
         font-size: clamp(10px, 4vw, 25px);
     }
+    .download, .footer{
+        display: none;
+    }
 }
-
