--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,7 @@
     margin: auto;
 }
 
-.carousel-item { 
+.carousel-item {
     height: 50%;
 }
 
@@ -13,16 +13,43 @@
     bottom: 35%;
 }
 
-.carousel-container{
+.carousel-container {
     padding: 15% 15%;
 }
 
-.row{
+.row {
     margin-left: 0;
     margin-right: 0;
 }
 
-.banner{
+.banner {
+    position: relative;
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
+
+.carousel-container{
+    background: rgba(255,255,255,0.4);
+    width: 35%;
+    padding: 4% 4%;
+    border-radius: 0.75rem;
+    position: absolute;
+    left: 10%;
+}
+
+.carousel-container1{
+    background: rgba(255,255,255,0.4);
+    width: 40%;
+    padding: 4% 4%;
+    border-radius: 0.75rem;
+    position: absolute;
+    left: 10%;
+}
+
+
+.banner {
     background-image: url(/images/home/home-bg.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -32,18 +59,8 @@
     align-items: center;
     justify-content: center;
 }
-.banner1{
-    background-color: #FCFCFC;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.book_container{
+.book_container {
     top: 50%;
     margin: 0 auto;
     background: #F7f7f7;
@@ -54,37 +71,38 @@
     text-align: center;
 }
 
-.no_active{
+.no_active {
     color: #1A5184;
-    font-weight:bolder;
+    font-weight: bolder;
     margin: 0% 0% 3% 0%;
     font-size: clamp(30px, 4vw, 40px);
 }
 
-.qoute{
+.qoute {
     margin: 0% 7% 15% 7%;
     font-size: clamp(15px, 4vw, 25px);
 }
 
-.text h1{
+.text h1 {
     color: #1A5184;
-    font-weight:bolder;
+    font-weight: bolder;
     margin: 0% 7% 2% 7%;
     font-size: clamp(50px, 4vw, 70px);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.more-info{
-    display:flow-root;
+.more-info {
+    display: flow-root;
     background: linear-gradient(-10deg, #fcd3b4, #fdf1e8, #bbdff1, #BEE7FD);
 }
 
-.card-center{
+.card-center {
     align-items: center;
     align-content: center;
     text-align: center;
 }
-.card{
+
+.card {
     margin: 20px;
     background-color: #FFEDDF;
     background-clip: border-box;
@@ -93,70 +111,420 @@
     max-width: 540px;
 }
 
-.card-body{
+.card-body {
     align-content: space-between;
 }
-.card-img{
-    object-fit:fill;
+
+.card-img {
+    object-fit: fill;
     border-radius: 0.75rem;
 }
 
-
-.price{
-    font-weight:bolder;
+.price {
+    font-weight: bolder;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 }
-.price1{
+
+.price1 {
     padding-left: 10px;
 }
-.book{
+
+.book {
     padding-right: 10px;
 }
 
-.starts{
+.starts {
     font-size: small;
 }
 
-.price{
+.price {
     font-size: 30px;
 }
-.btn-align-left{
+
+.btn-align-left {
     align-items: flex-end;
 }
 
-
-.row2{
+.row2 {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 40px 0;
 }
 
-.col-6{
+.col-6 {
     position: relative;
     flex-basis: 50%;
     display: flex;
     align-items: center;
 }
 
-.col-6 .img-fluid{
+.col-6 .img-fluid {
     height: 50%;
 }
 
-
-.services{
+.services {
     margin-left: 2%;
     flex-basis: 35%;
-    
 }
 
-.for-you-text{
+.for-you-text {
     font-size: clamp(22px, 3vw, 26px);
-    font-weight:400;
+    font-weight: 400;
     color: #4d4d4d;
 }
 
+.title2 {
+    font-size: clamp(35px, 4vw, 55px);
+    font-weight: bold;
+    color: #FB8500;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 35px;
+    line-height: 70px;
+}
+
+.learn_srvbtn {
+    background: #f8b571
+}
+
+.recom_title {
+    padding: 40px 40px 0px 40px;
+}
+
+.customer_cards_title {
+    font-size: 25px;
+}
+
+.dcont {
+    margin-left: 2%;
+    flex-basis: 40%;
+}
+
+.download {
+    display: flow-root;
+    background: #6DCFF6;
+    padding: 4%;
+}
+
+.dtitle {
+    font-size: clamp(35px, 4vw, 60px);
+    font-weight: 700;
+    color: #ffffff;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 25px;
+}
+
+.d-text {
+    font-size: clamp(15px, 4vw, 25px);
+    font-weight: 400;
+    color: #292929;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 35px;
+    line-height: 40px;
+}
+
+.footer {
+    background-color: #061835;
+    padding: .75%;
+}
+
+.sweep-title {
+    font-size: clamp(15px, 4vw, 17px);
+    font-weight: 400;
+    color: #F7f7f7;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.mobile-spacer {
+    display: none;
+}
+
+.columns {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+
+.bg-img{
+    width: 100%;
+    height: 550px;
+}
+.bg-img1{
+    width: 100%;
+    height: 550px;
+}
+
+.reco-service{
+    padding: 35px;
+    margin-left: -250px;
+}
+.reco-service1{
+    padding: 35px;
+    margin-right: -250px;
+}
+.recom-service{
+    margin: 50px;
+}
+
+@media (max-width:768px) {
+    .carousel-item {
+        height: 30%;
+    }
+    .carousel-caption {
+        color: white;
+        position: absolute;
+        bottom: 15%;
+    }
+    .banner {
+        height: 60vh;
+    }
+    .book_container {
+        margin: 0 auto;
+        background: #F7f7f7;
+        width: 70%;
+        padding: 5% 7%;
+        border-radius: 0.75rem;
+        align-self: center;
+        text-align: center;
+    }
+    .no_active {
+        color: #1A5184;
+        font-weight: bolder;
+        margin: 0% 0% 3% 0%;
+        font-size: clamp(20px, 4vw, 40px);
+    }
+    .qoute {
+        margin: 0% 7% 15% 7%;
+        font-size: clamp(10px, 4vw, 25px);
+    }
+    .download, .footer {
+        display: none;
+    }
+    .row {
+        flex-direction: column;
+    }
+    .row1 {
+        justify-content: space-between;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    .card-img {
+        height: 265px;
+        object-fit: fill;
+        border-radius: 0.75rem;
+    }
+    .card {
+        margin: 20px;
+        max-width: 100%;
+    }
+    .customer_cards_title {
+        padding: 10px;
+        margin: 10px;
+    }
+    .mobile-spacer {
+        display: block;
+        height: 80px;
+    }
+    .columns {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .carousel-container{
+        background: rgba(255,255,255,0.4);
+        width: 50%;
+        padding: 4% 4%;
+        border-radius: 0.75rem;
+        position: static;
+    }
+    .banner {
+        position: relative;
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+        min-height: 75vh;
+    }
+    .carousel-container1{
+        background: rgba(255,255,255,0.4);
+        width: 50%;
+        padding: 4% 4%;
+        border-radius: 0.75rem;
+        position: static;
+        left: 10%;
+    }
+    .black{
+        font-size: 30px;
+    }
+
+    .bg-img1{
+        display: none;
+    }
+
+    .bg-img{
+        display: none;
+    }
+    
+    .reco-service{
+        padding: 35px;
+    }
+    .reco-service1{
+        padding: 35px;
+    }
+    .recom-service{
+        margin: 20px;
+        position: static;
+    }
+    
+}
+
+@media (max-width:450px) {
+    .banner {
+        height: 60vh;
+    }
+    .book_container {
+        margin: 0 auto;
+        background: #F7f7f7;
+        width: 80%;
+        padding: 7% 10%;
+        border-radius: 0.75rem;
+        align-self: center;
+        text-align: center;
+    }
+    .no_active {
+        color: #1A5184;
+        font-weight: bolder;
+        margin: 0% 0% 3% 0%;
+        font-size: clamp(20px, 4vw, 40px);
+    }
+    .qoute {
+        margin: 0% 7% 15% 7%;
+        font-size: clamp(10px, 4vw, 25px);
+    }
+    .download, .footer {
+        display: none;
+    }
+    .carousel-container{
+        background: rgba(255,255,255,0.4);
+        width: 80%;
+        padding: 4% 4%;
+        border-radius: 0.75rem;
+        position: absolute;
+        left: 10%;
+    }
+    .banner {
+        position: relative;
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+        min-height: 75vh;
+    }
+    .carousel-container1{
+        background: rgba(255,255,255,0.4);
+        width: 80%;
+        padding: 4% 4%;
+        border-radius: 0.75rem;
+        position: absolute;
+        left: 10%;
+    }
+
+    
+    .bg-img1{
+        display: none;
+    }
+
+    .bg-img{
+        display: none;
+    }
+    
+    .reco-service{
+        padding: 35px;
+        margin-left: 0px;
+    }
+    .reco-service1{
+        padding: 35px;
+        margin-right: 0px;
+    }
+    .recom-service{
+        margin: 20px;
+    }
+}
+
+
+#bannerSlides .carousel-control-next, #bannerSlides .carousel-control-prev {
+    width: 10%;
+}
+
+.fa-chevron-left, .fa-chevron-right {
+    font-size: 40px;
+}
+
+.text{
+    text-align: justify;
+    margin-bottom: 10px;
+}
+
+.text1{
+    text-align: justify;
+    font-size: medium;
+    font-weight: 500;
+}
+.slider .banner {
+    background-position: bottom center;
+}
+
+.slider .banner .caption {
+    max-width: 650px;
+    bottom: 35vh;
+}
+
+
+
+.banner .caption {
+    max-width: 550px;
+    
+    bottom: 25vh;
+}
+
+.banner .caption p {
+    
+    color: #000;
+    font-size: 1.125rem;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.banner .caption a {
+    font-size: 1.375rem;
+}
+
+.services{
+    margin-left: 2%;
+    flex-basis: 30%;
+    
+}
+
+.for-you1{
+    font-size: clamp(15px, 2vw, 26px);
+    font-weight: 900;
+    color: #106ea5;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+}
+
+.title1{
+    font-size: clamp(35px, 4vw, 55px);
+    font-weight: bold;
+    color: #003464;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 70px;
+}
+.for-you2{
+    font-size: clamp(15px, 2vw, 26px);
+    font-weight: 900;
+    color: #ffba75;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
 
 .title2{
     font-size: clamp(35px, 4vw, 55px);
@@ -171,190 +539,18 @@
     background: #f8b571
 }
 
-.recom_title{
-    padding: 20px 20px 0px 20px;
-}
-
-.customer_cards_title{
-    font-size: 25px;
-}
-
-.dcont{
-    margin-left: 2%;
-    flex-basis: 40%;
-    
-}
-.download{
-    display:flow-root;
-    background: #6DCFF6;
-    padding: 4%;
-}
-
-.dtitle{
-    font-size: clamp(35px, 4vw, 60px);
-    font-weight: 700;
-    color: #ffffff;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-bottom: 25px;
-}
-.d-text{
-    font-size: clamp(15px, 4vw, 25px);
-    font-weight: 400;
-    color: #292929;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-bottom: 35px;
-    line-height: 40px;
-}
-
-.footer {
-    margin-top: 30px;
-    background-color: #061835;
-    margin:0 auto;
-    width:100%;
-    height:auto;
-    overflow:hidden;
-    position: relative;
-    bottom: 0px;
-    padding: .75%;
-    color: white;
-}
-.sweep-title{
-    font-size: clamp(15px, 4vw, 17px);
+.for-you-text{
+    font-size: clamp(22px, 3vw, 26px);
     font-weight:400;
-    color: #F7f7f7;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.mobile-spacer{
-    display: none;
-
-}
-
-.columns{
-    padding-left: 0;
-    padding-right: 0;
-}
-@media (max-width:768px){
-    .carousel-item { 
-        height: 30%;
-    }
-    .carousel-caption {
-        color: white;
-        position: absolute;
-        bottom: 15%;
-    }
-    .banner{
-        height: 60vh;
-    }
-    .book_container{
-        margin: 0 auto;
-        background: #F7f7f7;
-        width: 70%;
-        padding: 5% 7%;
-        border-radius: 0.75rem;
-        align-self: center;
-        text-align: center;
-    }
-    .no_active{
-        color: #1A5184;
-        font-weight:bolder;
-        margin: 10% 10% 10% 10%;
-        font-size: clamp(30px, 5vw, 50px);
-    }
-    .qoute{
-        margin: 0% 10% 5% 10%;
-        font-size: clamp(10px, 4vw, 25px);
-    }
-    .download, .footer{
-        display: none;
-    }
-    .row{
-        flex-direction: column;
-    }
-    .row1{
-        justify-content: space-between;
-        margin-right: 0;
-        margin-left: 0;
-    }
-    .card-img{
-        height: 265px;
-        object-fit:fill;
-        border-radius: 0.75rem;
-        
-    }
-    .card{
-        margin: 20px;
-    }
-    .customer_cards_title{
-        padding: 10px;
-        margin: 10px;
-    }
-    .mobile-spacer{
-        display: block;
-        height: 80px;
-    }
-    .columns{
-        padding-left: 0;
-        padding-right: 0;
-    }
+    color: #4d4d4d;
 }
 
 
-@media (max-width:450px){
-    .banner{
-        height: 60vh;
-    }
-    .book_container{
-        margin: 0 auto;
-        background: #F7f7f7;
-        width: 80%;
-        padding: 7% 10%;
-        border-radius: 0.75rem;
-        align-self: center;
-        text-align: center;
-    }
-    .no_active{
-        color: #1A5184;
-        font-weight:bolder;
-        margin: 0% 0% 3% 0%;
-        font-size: clamp(20px, 4vw, 40px);
-    }
-    
-    .qoute{
-        margin: 0% 7% 15% 7%;
-        font-size: clamp(10px, 4vw, 25px);
-    }
-    .download, .footer{
-        display: none;
-    }
+.preferred-service{
+    margin-left: -150px;
 }
 
-.three_reason{
-    width: 100%;
-    background-color: #1A5184;
-    padding: 10px 0;
-    color: #fff;
-    height: 25%;
-}
 
-.text{
-    color: #1A5184;
-    font-weight:bolder;
-    font-size: clamp(30px, 4vw, 50px);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-}
-
-.desc {
-    text-align: center;
-    font-size: clamp(15px, 2vw, 30px);
-    font-size: 15px;
-}
-.title{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 22px;
-    font-weight: 400;
-}
-
-.fas{
-    color: #fff;
+.back, .next{
+    color: #000;
 }
