--- a/public/css/customer_checkout.css
+++ b/public/css/customer_checkout.css
@@ -3,8 +3,18 @@
     font-size: 30px;
     background-size: cover;
 }
-
-
+h2 {
+    text-align: center;
+    margin-top: 1%;
+}
+.main_profile_con {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    padding-top: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    border: 2px solid #FFEDDF;
+}
 .banner {
     background-image: url(/images/home/header1.jpg);
     background-position: center;
@@ -151,7 +161,7 @@
 .text h1{
     color: #1A5184;
     font-weight:bolder;
-    margin: 7%;
+    margin: 3%;
     font-size: clamp(30px, 4vw, 50px);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
@@ -418,7 +428,7 @@
     overflow-y: auto;
 }
 .customer_services_modal_footer{
-    padding: 16px;
+    padding: 5px;
 }
 
 .modal-header {
@@ -452,6 +462,7 @@
     }
     .modal_customer_services_title{
         padding-top: 10px;
+        font-weight: bold;
     }
     .close-web{
         padding: 10px;
@@ -468,7 +479,8 @@
 }
 
 .checkout-summary{
-    padding-top: 40px;
+    padding-top: 10px;
+    font-weight: lighten;
 }
 .modal{
     margin: 0;
