--- a/public/css/cleaner_job.css
+++ b/public/css/cleaner_job.css
@@ -104,3 +104,93 @@
     padding: .75%;
     color: white;
 } 
+
+.banner {
+    position: relative;
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    min-height: 75vh;
+}
+.book_container {
+    margin: 0 auto;
+    background: #F7f7f7;
+    width: 70%;
+    padding: 5% 7%;
+    border-radius: 0.75rem;
+    align-self: center;
+    text-align: center;
+}
+
+.no_active {
+    color: #1A5184;
+    font-weight: bolder;
+    margin: 0% 0% 3% 0%;
+    font-size: clamp(30px, 4vw, 40px);
+}
+@media (max-width:768px) {
+
+    .banner {
+        height: 60vh;
+    }
+    .book_container {
+        margin: 0 auto;
+        background: #F7f7f7;
+        width: 70%;
+        padding: 5% 7%;
+        border-radius: 0.75rem;
+        align-self: center;
+        text-align: center;
+    }
+  
+    .banner {
+        position: relative;
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+        min-height: 75vh;
+    }
+    .no_active {
+        color: #1A5184;
+        font-weight: bolder;
+        margin: 0% 0% 3% 0%;
+        font-size: clamp(20px, 4vw, 40px);
+    }
+    .qoute {
+        margin: 0% 7% 15% 7%;
+        font-size: clamp(10px, 4vw, 25px);
+    }
+    
+}
+
+@media (max-width:450px) {
+    .banner {
+        height: 60vh;
+    }
+    .book_container {
+        margin: 0 auto;
+        background: #F7f7f7;
+        width: 80%;
+        padding: 7% 10%;
+        border-radius: 0.75rem;
+        align-self: center;
+        text-align: center;
+    }
+    .banner {
+        position: relative;
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+        min-height: 75vh;
+    }
+    .no_active {
+        color: #1A5184;
+        font-weight: bolder;
+        margin: 0% 0% 3% 0%;
+        font-size: clamp(20px, 4vw, 40px);
+    }
+    .qoute {
+        margin: 0% 7% 15% 7%;
+        font-size: clamp(10px, 4vw, 25px);
+    }
+}
