--- a/public/css/cleaner_job.css
+++ b/public/css/cleaner_job.css
@@ -229,3 +229,11 @@
         font-size: clamp(10px, 4vw, 25px);
     }
 }
+
+.cleaner_trans_broom_2_1_img{
+    width: 80px;
+    height: 90px;
+    margin-right: 5px; 
+    background-color: #F6A06F;  
+    border-radius: 10px; 
+}
